# pptx-generator

./: .gitignore  .replit  KRI.txt  MANIFEST.in  README.md  collab.md  config.sh  data.yml  database.py  index.html  install.sh  local.md  main.py  package-lock.json  package.json  pptx-generator.js  pptx-generator.py  presentation.pptx  pyproject.toml  requirements.txt  search.py  setup.py  style.css  temp.py
.github/ISSUE_TEMPLATE/: suggest-a-missing-song.md
Presentations/: Remaja_template.pptx
app/: app.py  data.py  pptx_generator.py  pptx_generator_ui.py
app/data/: ._Remaja_template.pptx  ._~$Remaja_template.pptx  Remaja_template.pptx  data.yaml.txt  data.yml  ~$Remaja_template.pptx
app/static/: script.js  style.css
app/static/js/: package-lock.json  package.json  vanilla.js  vite.config.js  vite.html
app/static/js/src/: App.jsx  main.jsx
app/templates/: index.html  search.html
