[tool.poetry]
name = "repl-nix-pptx-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pptx_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^72.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
